[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["core", "strategies", "backtest", "risk", "utils", "notifier"]
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "B", "I"]
ignore = ["E203"]
extend-ignore = []
exclude = ["build", "dist", ".venv", "venv", "__pycache__", "data", "output"]

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["core*", "data*", "api*", "backtest*", "optimization*", "portfolio*", "predictive_models*", "risk*", "scheduler*", "strategies*", "notifier*", "reporting*", "knowledge_base*", "ml*", "demo*", "utils*"]

[project]
name = "n1v1"
version = "0.1.0"
description = "N1V1 Trading Bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.3.0",
    "pandas>=2.2.0",
    "numpy==1.26.2",
    "python-dotenv==1.0.0",
    "scikit-learn==1.3.2",
    "xgboost==2.0.2",
    "lightgbm==4.1.0",
    "joblib==1.3.2",
    "arch==6.3.0",
    "aiohttp==3.9.0",
    "requests>=2.32.0",
    "websockets==12.0",
    "colorama==0.4.6",
    "streamlit==1.28.0",
    "plotly==5.18.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.43",
    "databases[sqlite]==0.9.0",
    "prometheus-client==0.22.1",
    "jinja2==3.1.6",
    "aiofiles==24.1.0",
    "python-multipart==0.0.20",
    "slowapi==0.1.9",
    "redis==5.0.1",
    "discord.py==2.3.2",
    "python-telegram-bot==20.5",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "tzlocal==5.2",
    "ujson==5.8.0",
    "orjson==3.9.10",
    "schedule>=1.2.0",
    "pywin32==306; sys_platform == 'win32'",
    "deepmerge==1.1.0",
    "jsonschema==4.19.1",
    "pydantic==2.5.2",
]
